--- a/_sass/settings/_variables.scss
+++ b/_sass/settings/_variables.scss
@@ -10,10 +10,11 @@ $light-blue: #40B5E4;
 // Gradients
 $top-gradient: linear-gradient(to bottom, #01117A, #2891C5 24%, rgba(white, 0.20) 49%, rgba(white, 0.20) 85%, white);
 
-
 // Breakpoints
 $bp-sm: 30.75rem;
 $bp-md:43.75rem;
 $bp-lg: 75rem;
 $bp-xl: 93.75rem;
-$bp-nav:68.375rem;
+
+// Box Shadows
+$black-shadow: 1px 1px 7px rgba(0, 0, 0, 0.25);
