--- a/_sass/tools/_mixins.scss
+++ b/_sass/tools/_mixins.scss
@@ -11,9 +11,7 @@
   text-decoration: none;
   font-weight: 500;
   font-style: normal;
-  font-size: 1.125rem;
-  line-height: 1.3;
-  margin: 0;
+  cursor: pointer;
 }
 
 @mixin default-paragraph {
@@ -23,6 +21,5 @@
 
 @mixin default-ul {
   list-style: none;
-  margin: 0;
   padding: 0;
 }
