--- a/css/main.scss
+++ b/css/main.scss
@@ -68,6 +68,7 @@
 
 @import "components/navigation";
 @import "components/header";
+@import "components/single-main-grid";
 
 // =====================================================================
 // 8. Utilities
