--- a/_sass/components/_footer.scss
+++ b/_sass/components/_footer.scss
@@ -5,11 +5,12 @@
   &__container {
     width: 80%;
     margin: 0 auto;
+    padding: 4rem 0;
   }
 
   &__award-container {
     width: 100%;
-    padding: 4rem 0 3rem;
+    padding: 4rem 0;
   }
 
   &__award-image {
@@ -19,57 +20,69 @@
   }
 
   &__award-text {
-    color: #fff;
-    text-transform: uppercase;
-    font-weight: 600;
-    line-height: 1.3;
+    @include uppercase-white-font;
     text-align: center;
     margin: 1.5rem auto 0;
     max-width: 23.625rem;
   }
 
   &__link-lists {
-    width: 100;
-    margin: 0 auto;
-
-    @media(min-width:$bp-md) {
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      flex-wrap: wrap;
-    }
+    @include link-lists-flex;
   }
 
   &__link-list {
-    margin: 2rem 0 0;
+    width: 100%;
+    padding: 0 0.625rem 0 0;
+    box-sizing: border-box;
+    margin: 1.25rem 1.25rem 0;
 
-    @media(min-width:$bp-sm) {
-      margin: 0 4rem 2rem 0;
+    @media (min-width: $bp-footer-sm) {
+      width: 45%;
+      margin: 1.25rem 0.625rem 0;
+    }
+
+    @media (min-width: $bp-lg) {
+      width: 20%;
+      margin: 1.25rem 0.625rem;
+    }
+
+    @media (min-width: $bp-xl) {
+      width: 14%;
+      margin: 1.25rem 0.625rem 40px;
     }
   }
 
   &__link-title {
-    color:#fff;
-    text-transform: uppercase;
-    font-size: 1rem;
+    @include uppercase-white-font;
+    margin: 0 0 1.25rem;
+
   }
 
   &__link {
-    color:$medium-blue;
+    color: $medium-blue;
     font-size: 1rem;
-    line-height: 2.5;
+    line-height: 1.5;
+    text-decoration: none;
+
+    &--underlined {
+      color: $white;
+      text-decoration: underline;
+    }
+  }
+
+  &__list-item {
+    margin-bottom: 1.25rem;
   }
 
   &__social-list {
+    width: 100%;
     display: flex;
-    justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
-    margin: 4rem 0;
-
-    @media (min-width:$bp-sm){
-    margin: 1rem 4rem 3rem 0;
-    }
+    justify-content: center;
+    padding: 0 0.625rem 0 0;
+    box-sizing: border-box;
+    padding: 2rem 0;
+    margin: 0 auto;
   }
 
   &__social-item {
@@ -78,37 +91,64 @@
     }
   }
 
-&__copyright {
-  color: #fff;
-  line-height: 1.5;
-  max-width: 10rem;
-}
+  &__copyright-container {
+    width: 100%;
+    padding: 0 0.625rem 0 0;
+    box-sizing: border-box;
+    margin: 2.5rem 1.25rem 0.625rem;
 
-&__copyright-list {
-  padding: 0;
-  margin: 1rem 0;
-  display: flex;
-  align-items: center;
-}
+    @media (min-width: $bp-footer-sm) {
+      width: 45%;
+        }
 
-&__copyright-item {
-& + & {
-  margin-left: 1rem;
-}
-}
+    @media (min-width: $bp-lg) {
+      width: 20%;
+      margin: 1.25rem 0.625rem 0.625rem;
+    }
 
-&__copyright-link {
-  color: #fff;
-  border-bottom: #fff solid 0.093rem;
-}
+    @media (min-width: $bp-xl) {
+      width: 14%;
+      margin: 1.25rem 0.625rem 2.5rem;
+    }
+  }
 
-&__logo-container {
-  width: 100%;
-  padding: 4rem 0;
-}
+  &__copyright {
+    color: $white;
+    line-height: 1.5;
+    max-width: 17.5rem;
+    margin: 0;
+  }
 
-&__logo {
-  margin: 0 auto;
-  display: block;
-}
+  &__copyright-list {
+    padding: 0;
+    margin: 1.25rem 0 0;
+    display: flex;
+    align-items: center;
+  }
+
+  &__copyright-item {
+    & + & {
+      margin-left: 0.625rem;
+    }
+  }
+
+  &__copyright-link {
+    color: $white;
+  }
+
+  &__logo-container {
+    width: 100%;
+    margin: 1.875rem auto;
+
+    @media (min-width: $bp-xl) {
+      order: -1;
+      width: 14%;
+      margin: 1.25rem 0.625rem 2.5rem;
+    }
+  }
+
+  &__logo {
+    display: block;
+    margin: 0 auto;
+  }
 }
