--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,50 +7,50 @@
     <div class="c-footer__link-lists">
       <ul class="c-footer__link-list">
         <h1 class="c-footer__link-title">pilots</h4>
-          <li><a class="c-footer__link" href="#">First Officer</a></li>
-          <li><a class="c-footer__link" href="#">Cadet</a></li>
-          <li><a class="c-footer__link" href="#">Rotor Transition Program</a></li>
+          <li class="c-footer__list-item"><a class="c-footer__link" href="#">First Officer</a></li>
+          <li class="c-footer__list-item"><a class="c-footer__link" href="#">Cadet</a></li>
+          <li class="c-footer__list-item"><a class="c-footer__link" href="#">Rotor Transition<br>Program</a></li>
       </ul>
       <ul class="c-footer__link-list">
-        <h1 class="c-footer__link-title">mechanics & maintenance</h4>
-          <li><a class="c-footer__link" href="#">Mechanics & Maintenance Careers</a></li>
-          <li><a class="c-footer__link" href="#">Maintenance Military Transition Program</a></li>
-          <li><a class="c-footer__link" href="#">Maintenance Student Pathway</a></li>
-          <li><a class="c-footer__link" href="#">Flight Attendants</a></li>
-          <li><a class="c-footer__link" href="#">More Airline Careers</a></li>
+        <h1 class="c-footer__link-title">mechanics &<br>maintenance</h4>
+          <li class="c-footer__list-item"><a class="c-footer__link" href="#">Mechanics &<br>Maintenance Careers</a></li>
+          <li class="c-footer__list-item"><a class="c-footer__link" href="#">Maintenance Military<br>Transition Program</a></li>
+          <li class="c-footer__list-item"><a class="c-footer__link" href="#">Maintenance Student<br>Pathway</a></li>
+          <li class="c-footer__list-item"><a class="c-footer__link" href="#">Flight Attendants</a></li>
+          <li class="c-footer__list-item"><a class="c-footer__link" href="#">More Airline Careers</a></li>
       </ul>
       <ul class="c-footer__link-list">
         <h1 class="c-footer__link-title">life at scout</h4>
-          <li><a class="c-footer__link" href="#">About</a></li>
-          <li><a class="c-footer__link" href="#">Culture</a></li>
-          <li><a class="c-footer__link" href="#">Fleet</a></li>
-          <li><a class="c-footer__link" href="#">Leadership</a></li>
-          <li><a class="c-footer__link" href="#">Route Map</a></li>
+          <li class="c-footer__list-item"><a class="c-footer__link" href="#">About</a></li>
+          <li class="c-footer__list-item"><a class="c-footer__link" href="#">Culture</a></li>
+          <li class="c-footer__list-item"><a class="c-footer__link" href="#">Fleet</a></li>
+          <li class="c-footer__list-item"><a class="c-footer__link" href="#">Leadership</a></li>
+          <li class="c-footer__list-item"><a class="c-footer__link" href="#">Route Map</a></li>
       </ul>
       <ul class="c-footer__link-list">
-        <li><a class="c-footer__link" href="#">View All Job Openings</a></li>
-        <li><a class="c-footer__link" href="#">News</a></li>
-        <li><a class="c-footer__link" href="#">Contact Us</a></li>
-        <li><a class="c-footer__link" href="#">Passenger Information</a></li>
-        <li><a class="c-footer__link" href="#">Web Store</a></li>
+        <li class="c-footer__list-item"><a class="c-footer__link c-footer__link--underlined" href="#">View All Job Openings</a></li>
+        <li class="c-footer__list-item"><a class="c-footer__link c-footer__link--underlined" href="#">News</a></li>
+        <li class="c-footer__list-item"><a class="c-footer__link c-footer__link--underlined" href="#">Contact Us</a></li>
+        <li class="c-footer__list-item"><a class="c-footer__link c-footer__link--underlined" href="#">Passenger Information</a></li>
+        <li class="c-footer__list-item"><a class="c-footer__link c-footer__link--underlined" href="#">Web Store</a></li>
       </ul>
-      <ul class="c-footer__social-list">
-        <li class="c-footer__social-item"><a href="#"><img src="../assets/facebook-logo.svg"  alt="Facebook Logo Icon"></a></li>
-        <li class="c-footer__social-item"><a href="#"><img src="../assets/instagram-logo.svg" alt="Instagram Logo Icon"></a></li>
-        <li class="c-footer__social-item"><a href="#"><img src="../assets/twitter-logo.svg" alt="Twitter Logo Icon"></a></li>
-        <li class="c-footer__social-item"><a href="#"><img src="../assets/linkedin-logo.svg" alt="LinkedIn Logo Icon"></a></li>
-        <li class="c-footer__social-item"><a href="#"><img src="../assets/glassdoor-logo.svg" alt="Glassdoor Logo Icon"></a></li>
-      </ul>
-    <div class="c-footer__copyright-container">
-    <p class="c-footer__copyright">All material &copy; 2019 Scout Airlines. All rights reserved.</p>
-    <ul class="c-footer__copyright-list">
-      <li class="c-footer__copyright-item"><a class="c-footer__copyright-link" href="#">Terms</a></li>
-      <li class="c-footer__copyright-item"><a class="c-footer__copyright-link" href="#">Privacy</a></li>
+      <div class="c-footer__copyright-container">
+        <p class="c-footer__copyright">All material &copy; 2019 Scout Airlines. All rights reserved.</p>
+        <ul class="c-footer__copyright-list">
+          <li class="c-footer__copyright-item"><a class="c-footer__copyright-link" href="#">Terms</a></li>
+          <li class="c-footer__copyright-item"><a class="c-footer__copyright-link" href="#">Privacy</a></li>
+        </ul>
+      </div>
+      <div class="c-footer__logo-container">
+        <img class="c-footer__logo" src="../assets/scout-logo-white.svg"
+      </div>
+    </div>
+    <ul class="c-footer__social-list">
+      <li class="c-footer__social-item"><a href="#"><img src="../assets/facebook-logo.svg" alt="Facebook Logo Icon"></a></li>
+      <li class="c-footer__social-item"><a href="#"><img src="../assets/instagram-logo.svg" alt="Instagram Logo Icon"></a></li>
+      <li class="c-footer__social-item"><a href="#"><img src="../assets/twitter-logo.svg" alt="Twitter Logo Icon"></a></li>
+      <li class="c-footer__social-item"><a href="#"><img src="../assets/linkedin-logo.svg" alt="LinkedIn Logo Icon"></a></li>
+      <li class="c-footer__social-item"><a href="#"><img src="../assets/glassdoor-logo.svg" alt="Glassdoor Logo Icon"></a></li>
     </ul>
-    </div>
-    <div class="c-footer__logo-container">
-    <img class="c-footer__logo" src="../assets/scout-logo-white.svg">
-    </div>
-    </div>
   </div>
 </footer>
