--- a/_sass/tools/_mixins.scss
+++ b/_sass/tools/_mixins.scss
@@ -23,3 +23,20 @@
   list-style: none;
   padding: 0;
 }
+
+@mixin uppercase-white-font {
+  color: $white;
+  font-size: 1rem;
+  text-transform: uppercase;
+  font-weight: 600;
+  line-height: 1.3;
+}
+
+@mixin link-lists-flex {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-start;
+}
