init: main grid layout

--- a/_sass/components/_main-grid.scss
+++ b/_sass/components/_main-grid.scss
@@ -24,7 +24,7 @@
     width: 100%;
     margin: 4rem 0;
 
-    @media (min-width: 570px) {
+    @media (min-width: 35.625rem){
       margin: 0;
     }
   }
