--- a/css/main.scss
+++ b/css/main.scss
@@ -69,6 +69,7 @@
 @import "components/navigation";
 @import "components/header";
 @import "components/single-main-grid";
+@import "components/main-grid";
 @import "components/footer"
 
 // =====================================================================
