--- a/_includes/single-main-grid.html
+++ b/_includes/single-main-grid.html
@@ -1,9 +1,9 @@
 <div class="c-grid-item">
   <div class="c-grid-item__container">
     <a href="#" class="c-grid-item__link" aria-label="Visit First Officers page">
-      <img class="c-grid-item__image" src="assets/homepage-first-officer-2.png" alt="An image of a First Officer">
+      <img class="c-grid-item__image" src="{{card.image}}" alt="An image of a First Officer">
       <div class="c-grid-item__cta">
-        <p class="c-grid-item__text">first officer</p>
+        <p class="c-grid-item__text">{{card.position}}</p>
       </div>
     </a>
   </div>
