fix: PR changes for footer

--- a/_sass/settings/_variables.scss
+++ b/_sass/settings/_variables.scss
@@ -4,8 +4,10 @@ $secondary-font: 'Gotham A', 'Gotham B' sans-serif;
 
 // Colors
 $dark-blue: #002131;
-$medium-blue: #007CBB;
+$medium-blue: #0599e3;
 $light-blue: #40B5E4;
+$red: #C32032;
+$darker-red: #7F1520;
 $white: #FFFFFF;
 
 // Gradients
