--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,32 +1,39 @@
 <footer class="c-footer">
   <div class="c-footer__container">
-    <section class="c-footer__award-container">
-      <img src="../assets/Group 2.svg" class="c-footer__award-image" alt="">
-      <p class="c-footer__award-text">named one of the best workplaces to work in ohio for 2016, 2017 and 2018</p>
+    <section class="c-footer__section">
+      <img src="../assets/Group 2.svg" class="c-footer__section-image" alt="">
+      <p class="c-footer__section-text">named one of the best workplaces to work in ohio for 2016, 2017 and 2018</p>
     </section>
     <div class="c-footer__link-lists">
+      <div class="c-footer__link-list-flex-container">
+      <h2 class="c-footer__link-title">pilots</h2>
       <ul class="c-footer__link-list">
-        <h1 class="c-footer__link-title">pilots</h4>
           <li class="c-footer__list-item"><a class="c-footer__link" href="#">First Officer</a></li>
           <li class="c-footer__list-item"><a class="c-footer__link" href="#">Cadet</a></li>
           <li class="c-footer__list-item"><a class="c-footer__link" href="#">Rotor Transition<br>Program</a></li>
       </ul>
+      </div>
+      <div class="c-footer__link-list-flex-container">
+      <h2 class="c-footer__link-title">mechanics &<br>maintenance</h2>
       <ul class="c-footer__link-list">
-        <h1 class="c-footer__link-title">mechanics &<br>maintenance</h4>
           <li class="c-footer__list-item"><a class="c-footer__link" href="#">Mechanics &<br>Maintenance Careers</a></li>
           <li class="c-footer__list-item"><a class="c-footer__link" href="#">Maintenance Military<br>Transition Program</a></li>
           <li class="c-footer__list-item"><a class="c-footer__link" href="#">Maintenance Student<br>Pathway</a></li>
           <li class="c-footer__list-item"><a class="c-footer__link" href="#">Flight Attendants</a></li>
           <li class="c-footer__list-item"><a class="c-footer__link" href="#">More Airline Careers</a></li>
       </ul>
+      </div>
+      <div class="c-footer__link-list-flex-container">
+      <h2 class="c-footer__link-title">life at scout</h2>
       <ul class="c-footer__link-list">
-        <h1 class="c-footer__link-title">life at scout</h4>
           <li class="c-footer__list-item"><a class="c-footer__link" href="#">About</a></li>
           <li class="c-footer__list-item"><a class="c-footer__link" href="#">Culture</a></li>
           <li class="c-footer__list-item"><a class="c-footer__link" href="#">Fleet</a></li>
           <li class="c-footer__list-item"><a class="c-footer__link" href="#">Leadership</a></li>
           <li class="c-footer__list-item"><a class="c-footer__link" href="#">Route Map</a></li>
       </ul>
+      </div>
+      <div class="c-footer__link-list-flex-container">
       <ul class="c-footer__link-list">
         <li class="c-footer__list-item"><a class="c-footer__link c-footer__link--underlined" href="#">View All Job Openings</a></li>
         <li class="c-footer__list-item"><a class="c-footer__link c-footer__link--underlined" href="#">News</a></li>
@@ -34,6 +41,7 @@
         <li class="c-footer__list-item"><a class="c-footer__link c-footer__link--underlined" href="#">Passenger Information</a></li>
         <li class="c-footer__list-item"><a class="c-footer__link c-footer__link--underlined" href="#">Web Store</a></li>
       </ul>
+      </div>
       <div class="c-footer__copyright-container">
         <p class="c-footer__copyright">All material &copy; 2019 Scout Airlines. All rights reserved.</p>
         <ul class="c-footer__copyright-list">
@@ -46,11 +54,11 @@
       </div>
     </div>
     <ul class="c-footer__social-list">
-      <li class="c-footer__social-item"><a href="#"><img src="../assets/facebook-logo.svg" alt="Facebook Logo Icon"></a></li>
-      <li class="c-footer__social-item"><a href="#"><img src="../assets/instagram-logo.svg" alt="Instagram Logo Icon"></a></li>
-      <li class="c-footer__social-item"><a href="#"><img src="../assets/twitter-logo.svg" alt="Twitter Logo Icon"></a></li>
-      <li class="c-footer__social-item"><a href="#"><img src="../assets/linkedin-logo.svg" alt="LinkedIn Logo Icon"></a></li>
-      <li class="c-footer__social-item"><a href="#"><img src="../assets/glassdoor-logo.svg" alt="Glassdoor Logo Icon"></a></li>
+      <li class="c-footer__social-item" aria-label="Visit Scout's Facebook page"><a href="#"><img src="../assets/facebook-logo.svg"></a></li>
+      <li class="c-footer__social-item" aria-label="Visit Scout's Instragram page"><a href="#"><img src="../assets/instagram-logo.svg"></a></li>
+      <li class="c-footer__social-item" aria-label="Visit Scout's Twitter page"><a href="#"><img src="../assets/twitter-logo.svg"></a></li>
+      <li class="c-footer__social-item" aria-label="Visit Scout's Linkedin page"><a href="#"><img src="../assets/linkedin-logo.svg"></a></li>
+      <li class="c-footer__social-item" aria-label="Visit Scout's Glassdoor page"><a href="#"><img src="../assets/glassdoor-logo.svg"></a></li>
     </ul>
   </div>
 </footer>
