--- a/_sass/components/_footer.scss
+++ b/_sass/components/_footer.scss
@@ -8,29 +8,28 @@
     padding: 4rem 0;
   }
 
-  &__award-container {
+  &__section {
     width: 100%;
     padding: 4rem 0;
   }
 
-  &__award-image {
+  &__section-image {
     width: 5rem;
     margin: 0 auto;
     display: block;
   }
 
-  &__award-text {
+  &__section-text {
     @include uppercase-white-font;
     text-align: center;
     margin: 1.5rem auto 0;
-    max-width: 23.625rem;
   }
 
   &__link-lists {
-    @include link-lists-flex;
+    @include display-flex-row-center-start;
   }
 
-  &__link-list {
+  &__link-list-flex-container {
     width: 100%;
     padding: 0 0.625rem 0 0;
     box-sizing: border-box;
@@ -52,10 +51,13 @@
     }
   }
 
+  &__link-list {
+    margin: 0;
+  }
+
   &__link-title {
     @include uppercase-white-font;
     margin: 0 0 1.25rem;
-
   }
 
   &__link {
@@ -115,7 +117,6 @@
   &__copyright {
     color: $white;
     line-height: 1.5;
-    max-width: 17.5rem;
     margin: 0;
   }
 
