--- a/_sass/tools/_mixins.scss
+++ b/_sass/tools/_mixins.scss
@@ -32,7 +32,7 @@
   line-height: 1.3;
 }
 
-@mixin link-lists-flex {
+@mixin display-flex-row-center-start {
   width: 100%;
   display: flex;
   justify-content: center;
