fix: fix cards for each aria label to be read

--- a/_includes/single-main-grid.html
+++ b/_includes/single-main-grid.html
@@ -1,6 +1,6 @@
 <div class="c-grid-item">
   <div class="c-grid-item__container">
-    <a href="#" class="c-grid-item__link" aria-label="Visit First Officers page">
+    <a href="#" class="c-grid-item__link" aria-label="Visit {{card.position}} page">
       <img class="c-grid-item__image" src="{{card.image}}" alt="An image of a First Officer">
       <div class="c-grid-item__cta">
         <p class="c-grid-item__text">{{card.position}}</p>
