--- a/_sass/settings/_variables.scss
+++ b/_sass/settings/_variables.scss
@@ -5,7 +5,7 @@ $secondary-font: 'Gotham A', 'Gotham B' sans-serif;
 // Colors
 $dark-blue: #002131;
 $medium-blue: #0599e3;
-$light-blue: #40B5E4;
+$light-blue: #46CAFF;
 $red: #C32032;
 $darker-red: #7F1520;
 $white: #FFFFFF;
