init: blockquote mobile layout

--- a/css/main.scss
+++ b/css/main.scss
@@ -70,6 +70,7 @@
 @import "components/header";
 @import "components/single-main-grid";
 @import "components/main-grid";
+@import "components/blockquote-section";
 @import "components/footer"
 
 // =====================================================================
