wip: blockquote media queries layout

--- a/_includes/blockquote-section.html
+++ b/_includes/blockquote-section.html
@@ -1,12 +1,9 @@
 <section class="c-blockquote">
   <div class="c-blockquote__image-container">
-    <img src="assets/GLINTstudios_PSA-Airlines_Dayton_0099.jpg" class="c-blockquote__image"></img>
+    <img src="assets/GLINTstudios_PSA-Airlines_Dayton_0099.jpg" class="c-blockquote__image">
     <blockquote class="c-blockquote__text">
       "We have an incredible group of professionals which keep our birds flying safely on a
-      daily basis.”
+      daily&nbsp;basis." <p class="c-blockquote__source">john car | base manager of aircraft maintenance</p>
     </blockquote>
-    <p class="c-blockquote__source">
-    john car | base manager of aircraft maintenance
-    </p> 
-    </div>
-  </section>
+  </div>
+</section>
