wip: responsive blockquote for big screen with image gradient

--- a/_includes/blockquote-section.html
+++ b/_includes/blockquote-section.html
@@ -1,9 +1,15 @@
 <section class="c-blockquote">
-  <div class="c-blockquote__image-container">
+  <div class="c-blockquote__inner-container">
+    <div class="c-blockquote__image-container">
+      <div class="c-blockquote__gradient-container">
     <img src="assets/GLINTstudios_PSA-Airlines_Dayton_0099.jpg" class="c-blockquote__image">
+    </div>
+    </div>
+    <div class="c-blockquote__text-container">
     <blockquote class="c-blockquote__text">
       "We have an incredible group of professionals which keep our birds flying safely on a
       daily&nbsp;basis." <p class="c-blockquote__source">john car | base manager of aircraft maintenance</p>
     </blockquote>
+  </div>
   </div>
 </section>
