--- a/_sass/components/_blockquote-section.scss
+++ b/_sass/components/_blockquote-section.scss
@@ -4,28 +4,54 @@
   margin: 4rem auto;
   background: #F4F4F4;
 
-  &__image-container {
+  &__inner-container {
     width: 80%;
     margin: 0 auto;
     position: relative;
   }
 
-  &__image {
+&__image-container{
+  position: relative;
+  width: 100%;
+  height: 100%;
+ }
+
+  &__image-container {
     width: 100%;
     max-width: 64.875rem;
     margin: 0 auto 2rem;
-    
-    @media (min-width: $bp-md) {
-      background-image: linear-gradient (to-right, (rgba(255, 255 ,255, 0)), (rgba(255, 255 ,255, 1)));
+
+    @media (min-width: $bp-sm){
+      margin: 0;
     }
   }
+
+  &__image {
+    width: 100%;
+  }
+
+
+  &__gradient-container:after {
+    position: absolute;
+    width: 100%;
+    height: 99.4%;
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0) 70%, rgba(255, 255, 255, 1) 100%,);
+    left: 0;
+    top: 0;
+    content: '';
+  }
+
+&__text-container {
+    margin: 2rem 0 0;
+}
 
   &__text {
     margin: 0;
     font-size: 1.375rem;
     font-weight: 700;
 
-    @media (min-width: $bp-xl) {
+
+    @media (min-width: 2000px) {
       position: absolute;
       top: 14rem;
       left: 57rem;
