fix: PR changes: unnecessary comments, change color variables, delete extra media query on grid

--- a/_includes/single-main-grid.html
+++ b/_includes/single-main-grid.html
@@ -1,7 +1,7 @@
 <div class="c-grid-item">
   <div class="c-grid-item__container">
-    <a href="#" class="c-grid-item__link" aria-label="Visit {{card.position}} page">
-      <img class="c-grid-item__image" src="{{card.image}}" alt="An image of a First Officer">
+    <a href="#" class="c-grid-item__link">
+      <img class="c-grid-item__image" src="{{card.image}}" alt="">
       <div class="c-grid-item__cta">
         <p class="c-grid-item__text">{{card.position}}</p>
       </div>
