--- a/_sass/components/_footer.scss
+++ b/_sass/components/_footer.scss
@@ -1,5 +1,5 @@
 .c-footer {
-  background-color: $dark-blue;
+  background-color: $c-daintree;
   width: 100%;
 
   &__container {
@@ -61,7 +61,7 @@
   }
 
   &__link {
-    color: $medium-blue;
+    color: $c-lochmara;
     font-size: 1rem;
     line-height: 1.5;
     text-decoration: none;
@@ -71,7 +71,7 @@
   }
 
     &--underlined {
-      color: $white;
+      color: $c-pure-white;
       text-decoration: underline;
     }
   }
@@ -119,7 +119,7 @@
   }
 
   &__copyright {
-    color: $white;
+    color: $c-pure-white;
     line-height: 1.5;
     margin: 0;
   }
@@ -138,7 +138,7 @@
   }
 
   &__copyright-link {
-    color: $white;
+    color: $c-pure-white;
 
     &:hover {
     @include link-hover-light-blue;
