wip: add custom breakpoint variables and finish component layout

--- a/_includes/blockquote-section.html
+++ b/_includes/blockquote-section.html
@@ -2,7 +2,7 @@
   <div class="c-blockquote__inner-container">
     <div class="c-blockquote__image-container">
       <div class="c-blockquote__gradient-container">
-    <img src="assets/GLINTstudios_PSA-Airlines_Dayton_0099.jpg" class="c-blockquote__image">
+    <img src="assets/GLINTstudios_PSA-Airlines_Dayton_0099.jpg" class="c-blockquote__image" alt="A group photo of the Scout Airlines team">
     </div>
     </div>
     <div class="c-blockquote__text-container">
