--- a/css/main.scss
+++ b/css/main.scss
@@ -71,6 +71,7 @@
 @import "components/single-main-grid";
 @import "components/main-grid";
 @import "components/blockquote-section";
+@import "components/news-section";
 @import "components/footer"
 
 // =====================================================================
