--- a/_sass/settings/_variables.scss
+++ b/_sass/settings/_variables.scss
@@ -9,6 +9,7 @@ $c-picton-blue: #40B5E4;
 $c-cardinal: #C32032;
 $c-tamarillo: #921624;
 $c-pure-white: #FFFFFF;
+$c-wild-sand: #F4F4F4;
 
 // Gradients
 $top-gradient: linear-gradient(to bottom, #01117A, #2891C5 24%, rgba(white, 0.20) 49%, rgba(white, 0.20) 85%, white);
