wip: finalize copyright section and add media queries

--- a/css/main.scss
+++ b/css/main.scss
@@ -72,6 +72,7 @@
 @import "components/main-grid";
 @import "components/blockquote-section";
 @import "components/news-section";
+@import "components/american-copyright-section";
 @import "components/footer"
 
 // =====================================================================
