--- a/_sass/tools/_mixins.scss
+++ b/_sass/tools/_mixins.scss
@@ -52,3 +52,10 @@
   justify-content: space-between;
   align-items: center;
 }
+
+@mixin display-flex-copyright {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+}
