fix: changes based on PR, adjust code indentation, nesting and mixin

--- a/_includes/news-section.html
+++ b/_includes/news-section.html
@@ -1,11 +1,20 @@
 <article class="c-latest-news">
-<div class="c-latest-news__title-container">
-  <h1 class="c-latest-news__title">Latest News</h1>
-  <a href="#" class="c-latest-news__link c-latest-news__link--border">View All News</a>
-</div>
-<ul class="c-latest-news__link-list">
-  <li class="c-latest-news__list-item"><a href="#" class="c-latest-news__link">Dion Flannery Honored as Dayton Business Journal’s Executive of the Year Finalist</a><p class="c-latest-news__date">february 2017</p></li>
-  <li class="c-latest-news__list-item"><a href="#" class="c-latest-news__link">Scour’s VP of Human Resources Speaks at Women in Aviation</a><p class="c-latest-news__date">june 2017</p></li>
-  <li class="c-latest-news__list-item"><a href="#" class="c-latest-news__link">Scout Named Best Workplace in Ohio for Third Consecutive Year</a><p class="c-latest-news__date">november 2018</p></li>
+  <div class="c-latest-news__title-container">
+    <h1 class="c-latest-news__title">Latest News</h1>
+    <a href="#" class="c-latest-news__link c-latest-news__link--border">View All News</a>
+  </div>
+  <ul class="c-latest-news__link-list">
+    <li class="c-latest-news__list-item">
+      <a href="#" class="c-latest-news__link">Dion Flannery Honored as Dayton Business Journal’s Executive of the Year Finalist</a>
+      <p class="c-latest-news__date">february 2017</p>
+    </li>
+    <li class="c-latest-news__list-item">
+      <a href="#" class="c-latest-news__link">Scout’s VP of Human Resources Speaks at Women in Aviation</a>
+      <p class="c-latest-news__date">june 2017</p>
+    </li>
+    <li class="c-latest-news__list-item">
+      <a href="#" class="c-latest-news__link">Scout Named Best Workplace in Ohio for Third Consecutive Year</a>
+      <p class="c-latest-news__date">november 2018</p>
+    </li>
   </ul>
 </article>
