--- a/_sass/components/_news-section.scss
+++ b/_sass/components/_news-section.scss
@@ -7,9 +7,9 @@
   }
 
   &__title-container {
-    @include display-flex-news;
+    @include display-flex-row-center-space-between;
 
-    @media (min-width:$bp-md) {
+    @media (min-width: $bp-md) {
       margin-bottom: 4rem;
     }
   }
@@ -27,13 +27,17 @@
   }
 
   &__link-list {
-    @include display-flex-news;
+    @include display-flex-row-center-space-between;
     margin: 2rem 0;
   }
 
   &__list-item {
     width: 100%;
     margin: 0.5rem 0;
+
+    &:last-of-type {
+      margin-right: 0;
+    }
 
     @media (min-width: $bp-md) {
       width: 30%;
@@ -42,23 +46,19 @@
     }
   }
 
-  &__list-item:last-of-type {
-    margin-right: 0;
-  }
-
   &__link {
     text-decoration: underline;
     color: $c-lochmara;
     line-height: 1.3;
 
+    &:hover {
+      color: $c-daintree;
+      transition: ease-in-out 0.3s;
+    }
+
     @media (min-width: $bp-sm) {
       font-size: 1.125rem;
     }
-  }
-
-  &__link:hover {
-    color: $c-daintree;
-    transition: ease-in-out 0.3s;
   }
 
   &__link--border {
@@ -68,26 +68,26 @@
     line-height: 1.3;
     font-weight: 700;
 
+    &:hover {
+      color: $c-lochmara;
+    }
+
+    &::after {
+      content: '';
+      display: block;
+      width: 0;
+      height: 3px;
+      background: $c-lochmara;
+      transition: width 0.3s;
+    }
+
+    &:hover::after {
+      width: 100%;
+    }
+
     @media (min-width: $bp-sm) {
       font-size: 1.125rem;
     }
-  }
-
-  &__link--border:hover {
-    color: $c-lochmara;
-  }
-
-  &__link--border::after {
-    content: '';
-    display: block;
-    width: 0;
-    height: 3px;
-    background: $c-lochmara;
-    transition: width 0.3s;
-  }
-
-  &__link--border:hover::after {
-    width: 100%;
   }
 
   &__date {
