fix: refactor file/folder structure,  markup structure, change navigation inside header and hero inside a section

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,42 @@
-<header class="c-hero">
-  <div class="c-hero__inner-container">
-  <img class="c-hero__image-plane" src="assets/plane.png" alt="image of an American Airlines plane">
-  <h1 class="c-hero__main-heading">Bring Your Passion&nbsp;to&nbsp;Life</h1>
-  <p class="c-hero__main-paragraph">Scout Airlines is committed to growing our company where passion is shared, professional excellence is expected, and all people - customers and employees - are valued and respected. Join us on our&nbsp;journey.</p>
-  </div>
-</header>
+<header>
+  <nav class="c-navigation">
+    <div class="c-navigation__container-mobile">
+      <div class="c-navigation__mobile">
+          <a href="#">
+            <img src="assets/scout-logo-white.svg" class="c-navigation__logo" alt="Scout Airlines logo">
+          </a>
+          <a href="#" class="c-navigation_mobile-menu"><svg width="18" height="15" xmlns="http://www.w3.org/2000/svg" alt="Menu icon">
+              <g stroke="#FFF" stroke-width="2" fill="none" fill-rule="evenodd" stroke-linecap="square">
+                <path d="M1.5 13.99h16.143M1.5 7.99h16.143M1.5 1.99h16.143" />
+              </g>
+            </svg>
+          </a>
+          </div>
+      </div>
+    </div>
+    <div class="c-navigation__container-desktop">
+      <div class="c-navigation__desktop">
+          <a href="#">
+            <img src="assets/scout-logo-white.svg" class="c-navigation__logo" alt="Scout Airlines logo">
+          </a>
+        <ul class="c-navigation__list">
+          <li class="c-navigation__list-item">
+            <a href="#" class="c-navigation__link">Pilots</a>
+          </li>
+          <li class="c-navigation__list-item">
+            <a href="#" class="c-navigation__link">Mechanics &<br>Maintenance</a>
+          </li>
+          <li class="c-navigation__list-item">
+            <a href="#" class="c-navigation__link">Flight<br>Attendants</a>
+          </li>
+          <li class="c-navigation__list-item">
+            <a href="#" class="c-navigation__link">More Airline<br>Careers</a>
+          </li>
+          <li class="c-navigation__list-item">
+            <a href="#" class="c-navigation__link">Life at Scout</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>  
