--- a/css/main.scss
+++ b/css/main.scss
@@ -66,8 +66,8 @@
 //    Specific UI components. This is where majority of our work takes place
 //    and our UI components are often composed of Objects and Components
 
-@import "components/navigation";
 @import "components/header";
+@import "components/hero-section";
 @import "components/single-main-grid";
 @import "components/main-grid";
 @import "components/blockquote-section";
