--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -1,73 +1,63 @@
-.c-hero {
+.c-navigation {
+  position: absolute;
   width: 100%;
-  height: 100%;
-  background: url('../assets/logo-background.svg'), $top-gradient, url("../assets/homepage-clouds.jpg");
-  background-repeat: no-repeat;
-  background-size: 50rem, cover, 200%;
-  background-position: center 0.125rem, center center, center bottom;
-  padding: 6rem 0 4rem;
 
-  @media (min-width:$bp-md) {
-    background-size: 75rem, cover, 150%;
-    background-position: center -4%, center center, bottom center;
-    padding: 8rem 0 4rem;
+  .c-navigation__logo {
+    width: 4rem;
+
+    @media (min-width:$bp-sm) {
+      width: 6rem;
+    }
   }
 
-  @media (min-width:$bp-lg) {
-    background-size: 93.75rem, cover, 100%;
-    background-position: center -4%, center center, center bottom;
-    padding: 12rem 0 4rem;
-  }
-
-  @media (min-width:$bp-xl) {
-    background: url('../assets/logo-background.svg'), linear-gradient(to bottom, #01117A, #2891C5 25%, rgba(255, 255, 255, 0.2) 62%, rgba(255, 255, 255, 0.2) 85%, white), url("../assets/homepage-clouds.jpg");
-    background-repeat: no-repeat;
-    background-size: 175rem, cover, 100%;
-    background-position: center -77%, center center, bottom center;
-  }
-
-  &__inner-container {
+  .c-navigation__container-mobile {
     width: 80%;
-    margin: 0 auto;
-  }
+    margin: 3rem auto 0;
 
-  &__main-heading {
-    @include main-heading-font;
-    max-width: 18.75rem;
+    .c-navigation__mobile {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
 
-    @media (min-width:$bp-sm) {
-      font-size: 2.625rem;
-    }
-
-    @media (min-width:$bp-md) {
-      font-size: 3.625rem;
-    }
-
-    @media (min-width:$bp-lg) {
-      font-size: 4.875rem;
-      max-width: 400px;
+      @media (min-width:$bp-nav) {
+        display: none;
+      }
     }
   }
 
-  &__main-paragraph {
-    @include default-paragraph;
-    margin: 2rem 0;
-    @media (min-width:$bp-sm) {
-      font-size: 1.125rem;
-      line-height: 1.5;
-      max-width: 30.625rem;
+  .c-navigation__container-desktop {
+    width: 80%;
+    margin: 2rem auto 0;
+
+    .c-navigation__desktop {
+      display: none;
+
+      @media (min-width:$bp-nav) {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
     }
-  }
 
-  &__image-plane {
-    width: 100%;
-    padding: 4rem 0;
-    margin: 0 auto;
-    max-width: 64rem;
-    display: block;
+    .c-navigation__list {
+      list-style: none;
+      padding: 0;
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-end;
+    }
 
-    @media (min-width:$bp-xl) {
-      padding: 9rem 0;
+    .c-navigation__list-item {
+      margin-left: 4rem;
+    }
+
+    .c-navigation__list-item:first-of-type {
+      margin-left: 0;
+    }
+
+    .c-navigation__link {
+      color: $c-pure-white;
+      text-decoration: none;
     }
   }
 }
