fix: PR changes based on comments. change text-align center and mixin name

--- a/_includes/american-copyright-section.html
+++ b/_includes/american-copyright-section.html
@@ -1,6 +1,6 @@
 <section class="c-american-copyright">
   <div class="c-american-copyright__container">
     <img src="../assets/american-ailrines-logo.svg" alt="American Airlines logo" class="c-american-copyright__image">
-    <p class="c-american-copyright__text">A wholly owned subsidiary of American Airlines</p>
+    <p class="c-american-copyright__text">A wholly owned subsidiary of American&nbsp;Airlines</p>
   </div>
 </section>
