wip: add nav dropdown,  active pseudo and fix nav breakpoint

--- a/_sass/settings/_variables.scss
+++ b/_sass/settings/_variables.scss
@@ -10,6 +10,7 @@ $c-cardinal: #C32032;
 $c-tamarillo: #921624;
 $c-pure-white: #FFFFFF;
 $c-wild-sand: #F4F4F4;
+$c-gallery: #EDEDED;
 
 // Gradients
 $top-gradient: linear-gradient(to bottom, #01117A, #2891C5 24%, rgba(white, 0.20) 49%, rgba(white, 0.20) 85%, white);
@@ -19,7 +20,7 @@ $bp-sm: 30.75rem;
 $bp-md:43.75rem;
 $bp-lg: 75rem;
 $bp-xl: 93.75rem;
-$bp-nav: 69.25rem;
+$bp-nav: 80rem;
 $bp-footer-sm: 31.25rem;
 
 // Box Shadows
