--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,8 +15,11 @@
     <div class="c-navigation__container-large">
       <ul class="c-navigation__list">
         <li class="c-navigation__list-item">
-          <!-- this should be a button ^ -->
-          <a href="#" class="c-navigation__link">Pilots</a>
+          <button class="c-navigation__button" type="button">Pilots
+            <svg class="c-navigation__arrow" height="20" width="20" viewbox="0 0 20 20">
+              <path d="M1 10, 10 18 ,19 10" fill="none" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+          </button>
           <ul class="c-navigation__sub-list">
             <li class="c-navigation__sub-list-item">
               <a href="#" class="c-navigation__sub-link">First Officers</a>
@@ -30,13 +33,17 @@
           </ul>
         </li>
         <li class="c-navigation__list-item">
-          <a href="#" class="c-navigation__link">Mechanics &<br>Maintenance</a>
+          <button class="c-navigation__button" type="button">Mechanics &<br>Maintenance
+            <svg class="c-navigation__arrow" height="20" width="20" viewbox="0 0 20 20">
+              <path d="M1 10, 10 18 ,19 10" fill="none" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+          </button>
           <ul class="c-navigation__sub-list">
             <li class="c-navigation__sub-list-item">
-              <a href="#" class="c-navigation__sub-link">Mechanics & Maintenance Careers</a>
+              <a href="#" class="c-navigation__sub-link">Mechanics &<br>Maintenance Careers</a>
             </li>
             <li class="c-navigation__sub-list-item">
-              <a href="#" class="c-navigation__sub-link">Maintenance Military Transition Program</a>
+              <a href="#" class="c-navigation__sub-link">Maintenance Military<br>Transition Program</a>
             </li>
             <li class="c-navigation__sub-list-item">
               <a href="#" class="c-navigation__sub-link">Maintenance Student Pathway</a>
@@ -50,7 +57,11 @@
           <a href="#" class="c-navigation__link">More Airline<br>Careers</a>
         </li>
         <li class="c-navigation__list-item">
-          <a href="#" class="c-navigation__link">Life at Scout</a>
+          <button class="c-navigation__button" type="button">Life at Scout
+            <svg class="c-navigation__arrow" height="20" width="20" viewbox="0 0 20 20">
+              <path d="M1 10, 10 18 ,19 10" fill="none" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+          </button>
           <ul class="c-navigation__sub-list">
             <li class="c-navigation__sub-list-item">
               <a href="#" class="c-navigation__sub-link">About</a>
