--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -6,7 +6,7 @@
 .c-navigation {
   @include display-flex-row-center-space-between;
   width: 80%;
-  margin: 4rem auto;
+  margin: 4rem auto 0;
 
   &__logo-image {
     width: 4rem;
@@ -37,10 +37,11 @@
     display: flex;
     justify-content: flex-start;
     align-items: flex-end;
+    margin: 0 0.5rem;
   }
 
   &__list-item {
-    margin-left: 4rem;
+    margin-left: 4.5rem;
 
     &:first-of-type {
       margin-left: 0;
@@ -49,10 +50,67 @@
 
   &__sub-list {
     display: none;
+    pointer-events: none;
+    background: $c-pure-white;
+    box-shadow: $black-shadow;
+    position: absolute;
+    top: 100%;
+  }
+
+    &__list-item:active > &__sub-list {
+      display: block;
+      pointer-events: all;
+    }
+
+  &__sub-link {
+    text-decoration: none;
+    color: $c-lochmara;
+    font-size: 1.125rem;
+    display: block;
+    padding: 1rem 1rem;
+    border: 1px solid $c-wild-sand;
+
+    &:hover {
+          background-color: $c-gallery;
+        }
   }
 
   &__link {
     color: $c-pure-white;
     text-decoration: none;
+    font-size: 1.125rem;
+    line-height: 1.3;
+    font-weight: 500;
   }
+
+  &__button {
+    display: inline-block;
+    border: none;
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    background: none;
+    color: $c-pure-white;
+    font-family: "Gotham A", "Gotham B";
+    font-size: 1.125rem;
+    font-weight: 500;
+    line-height: 1.3;
+    text-align: left;
+    cursor: pointer;
+
+    transition: background 250ms ease-in-out,
+                transform 150ms ease;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+
+    &:focus {
+      outline: none;
+    }
+
+  }
+
+  &__arrow {
+    margin: 0 0 0 0.25rem;
+  }
+
 }
