--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -66,7 +66,7 @@
 
   &__sub-link {
     text-decoration: none;
-    color: $c-lochmara;
+    color: $c-daintree;
     font-size: 1.125rem;
     display: block;
     padding: 1rem 1rem;
